refactor + chore: add swagger integration + refactor logic and methods